# tasktracker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: alembic.ini  env.py
migrations/versions/: 4ac8efb9971a_initial_migration.py
tasktracker/: config.py  tasktracker.db
tasktracker/api/: __init__.py  app.py  dependencies.py
tasktracker/api/tasks/: app.py  dependencies.py  schemas.py
tasktracker/api/users/: app.py  schemas.py
tasktracker/core/: auth.py  controllers.py  db.py  models.py
tasktracker/templates/: mytasks.html  newtask.html  signin.html  signup.html  viewtask.html
